# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  log.cpp  log.hpp  main.cpp
src/math/: math.cpp  math.hpp  math_test.cpp
test/: CMakeLists.txt  main_test.cpp
test/src/: main.cpp
